--- a/card.html
+++ b/card.html
@@ -46,9 +46,9 @@ button:hover, a:hover {
 
 <div class="card">
   <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-  <h1>John Doe</h1>
-  <p class="title">CEO & Founder, Example</p>
-  <p>Harvard University</p>
+  <h1>BALAJI</h1>
+  <p class="title">CEO & Founder, Apple</p>
+  <p>RR University</p>
   <div style="margin: 24px 0;">
     <a href="#"><i class="fa fa-dribbble"></i></a> 
     <a href="#"><i class="fa fa-twitter"></i></a>  
