--- a/card.html
+++ b/card.html
@@ -45,8 +45,8 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-  <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-  <h1>BALAJI</h1>
+  <img src="top.jpg" alt="John" style="width:100%">
+  <h1>Ram</h1>
   <p class="title">CEO & Founder, Apple</p>
   <p>RR University</p>
   <div style="margin: 24px 0;">
